@@ -1,3 +1,7 @@
+2005-04-08  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-decode-buffer): Decode `&#nnn;' entities in 128..159.
+
 2005-04-01  S V N Vishwanathan  <vishketan@yahoo.com>
 
 	* shimbun/sb-rediff.el (shimbun-rediff-content-end): Improve regexp.
